# model-eval

./: README.md  pyproject.toml
evals/: coding.yaml  logic.yaml
src/model_eval/: __init__.py  cli.py  loader.py  ollama.py  report.py  runner.py  schema.py  scoring.py
tests/: test_cli.py  test_loader.py  test_ollama.py  test_report.py  test_runner.py  test_schema.py  test_scoring.py
